kb8-configs/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtsm-frontend
  namespace: hydra
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rtsm-frontend
  template:
    metadata:
      labels:
        app: rtsm-frontend
    spec:
      containers:
        - name: rtsm-frontend
          image: rtsm-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
          - name: frontend-port
            containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: rtsm-frontend-service
  namespace: hydra
spec:
  selector:
    app: rtsm-frontend
  ports:
    - name: frontend-svc-port
      port: 80
      targetPort: frontend-port
  type: ClusterIP
