kb8-configs/grafana-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: hydra
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana-container
        image: grafana/grafana:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

        volumeMounts:
        - name: prometheus-ds
          mountPath: /etc/grafana/provisioning/datasources
          readOnly: true
        - name: storage-volume
          mountPath: /var/lib/grafana

      volumes:
      - name: prometheus-ds
        configMap:
          name: grafana-prometheus-datasource

      - name: storage-volume
        persistentVolumeClaim:
          claimName: grafana-storage

      dnsConfig:
        options:
          - name: ndots
            value: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: hydra
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30002
  type: LoadBalancer
